Fix zoom effect cursor position on initial zoom in.

BUG: 325799
FIXED-IN: 4.11.3